01-maas-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maas-api
  labels:
    app.kubernetes.io/part-of: maas
  annotations:
    opendatahub.io/managed: "false"
